# AutoMail-Outlook

./: .gitignore  AGENTS.md  PRD.md  PROMPT_CODEX.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
samples/: Cadastro de Empresas Contabilizuum - maio26.xlsx  Mala Direta - Email Cobrança CZ2.docx
scripts/: build_exe.ps1  create_email_preview.py  create_sample_excel.py
src/mailmerge_assistant/: __init__.py  app.py  clientes_mapper.py  config.py  controller.py  excel_reader.py  models.py  outlook_client.py  report_writer.py  template_engine.py  validators.py
src/mailmerge_assistant/ui/: main_window.py
tests/: test_clientes_mapper.py  test_controller.py  test_excel_reader.py  test_outlook_client.py  test_report_writer.py  test_template_engine.py  test_validators.py
