[project]
name = "outlook-mail-merge-assistant"
version = "0.1.0"
description = "Aplicativo desktop para criar rascunhos no Outlook a partir de planilha Excel."
requires-python = ">=3.11"
dependencies = [
    "customtkinter",
    "openpyxl",
    "pywin32",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mailmerge_assistant = ["assets/*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
exclude = ["build", "dist"]

[[tool.mypy.overrides]]
module = ["customtkinter", "win32com", "win32com.client", "openpyxl", "openpyxl.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
